[package]
name = "bevy_github_ci_template"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0 OR CC0-1.0"

# Compile with Performance Optimizations:
# https://bevyengine.org/learn/book/getting-started/setup/#compile-with-performance-optimizations

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy_enhanced_input = "0.23.2"
bevy_seedling = "0.7.0"
bevy = { version = "0.18.0", default-features = false, features = [
    # 2d
    "2d_bevy_render",
    "default_app",
    "picking",
    "scene",

    # 3d
    "3d_bevy_render",

    # ui
    "ui_api",
    "ui_bevy_render",

    # default_platform
    "android-game-activity",
    "bevy_gilrs",
    "bevy_winit",
    "default_font",
    "multi_threaded",
    "std",
    "sysinfo_plugin",
    "wayland",
    "webgl2",
    "x11",
] }
bevy-inspector-egui = "0.36.0"
bevy_hanabi = "0.18.0"
rand = "0.10.0"

# These lints may be important signals about code quality, but normal Bevy code
# commonly triggers them and the CI workflow treats them as errors, so we've
# chosen to allow them in this template.
#
# Feel free to delete the following lines.
[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
